--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,10 @@ select {
   width: 25px;
   height: 25px;
 }
-.searchbox__reset-icon:hover {
-  animation: spin 2s linear infinite;
+@media (hover: hover) {
+  .searchbox__reset-icon:hover {
+    animation: spin 2s linear infinite;
+  }
 }
 @-moz-keyframes spin {
   100% {
@@ -249,6 +251,18 @@ select {
 .error-message__img {
   margin: 20px 0;
   width: 100%;
+  min-width: 150px;
+  min-height: 150px;
+  max-width: 350px;
+  max-height: 350px;
+}
+.error-message__text {
+  font-size: 3rem;
+  text-align: center;
+  color: transparent;
+  font-weight: 900;
+  -webkit-text-stroke: 2px #282a42;
+  text-align: center;
 }
 /*------------------------------------*/
 
